<resources>
    <string name="app_name">Wordle People</string>

    <string name="world_people_with_count">Wordle People %1$s</string>
    <string name="world_people_with_count_of">Wordle People %1$s of %2$s</string>

    <string name="color">Color</string>
    <string name="trash_button">Delete</string>
    <string name="clear">Clear</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="gender">Gender</string>
    <string name="north">North</string>
    <string name="south">South</string>
    <string name="east">East</string>
    <string name="west">West</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="clear_data">Clear Data</string>
    <string name="import_data">Import Data…</string>

</resources>